--- a/app/tabs/chat/chat.page.html
+++ b/app/tabs/chat/chat.page.html
@@ -19,7 +19,7 @@
 
   <ng-container *ngIf="chat_events && chat_events.length == 0">
     <ion-card mode="ios" class="ion-text-center ion-padding">
-      You dont have any chats yet.
+      You don't have any chats yet.
     </ion-card>
   </ng-container>
 
