--- a/app/pages/notification/notification.page.html
+++ b/app/pages/notification/notification.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="" icon="arrow-back-outline"></ion-back-button>
     </ion-buttons>
-    <ion-title>Notification</ion-title>
+    <ion-title>Notifications</ion-title>
     <ion-icon slot="end" name="search-outline" class="search_icon ion-padding-end" (click)="toggleSearchBar()"></ion-icon>
   </ion-toolbar>
 </ion-header>
