--- a/app/events/edit-event/edit-event.page.html
+++ b/app/events/edit-event/edit-event.page.html
@@ -366,7 +366,7 @@
                 </div>
               </ion-accordion>
             </ng-container>
-          </ion-accordion-group>  
+          </ion-accordion-group>
 
           <ion-modal #modal trigger="open-modal_em" [initialBreakpoint]="0.75" [breakpoints]="[0.75]" style="overflow: scroll;">
             <ng-template>
@@ -399,7 +399,7 @@
                       {{ error.message }}
                     </div>
                   </ng-container>
-                  <ion-button style="margin-top:20px;" (click)="addEmegenctyContact()" shape="round">Save</ion-button>
+                  <ion-button style="margin-top:20px;" (click)="addEmergencyContact()" shape="round">Save</ion-button>
                 </ion-list>
             </ng-template>
           </ion-modal>
