--- a/app/pages/chat-detail/chat-detail.page.html
+++ b/app/pages/chat-detail/chat-detail.page.html
@@ -66,7 +66,7 @@
     <textarea #chat_input placeholder="Type message here" [(ngModel)]="editorMsg" (keyup.enter)="sendMsg()"
     (focusin)="onFocus()">
   </textarea>
-  <ion-button fill="clear" slot="icon-only" item-right (click)="sendMsg()">
+  <ion-button fill="clear" slot="icon-only" item-right (click)="sendMsg()" [disabled]="isSendingMessage">
     <ion-icon slot="icon-only" name="send"></ion-icon>
   </ion-button>
 </div>
