--- a/app/business/pages/edit-paid-event/edit-paid-event.page.html
+++ b/app/business/pages/edit-paid-event/edit-paid-event.page.html
@@ -351,7 +351,7 @@
                 </div>
               </ion-accordion>
             </ng-container>
-          </ion-accordion-group>  
+          </ion-accordion-group>
 
           <ion-modal #modal trigger="open-modal_em" [initialBreakpoint]="0.75" [breakpoints]="[0.75]" style="overflow: scroll;">
             <ng-template>
@@ -384,12 +384,11 @@
                       {{ error.message }}
                     </div>
                   </ng-container>
-                  <ion-button style="margin-top:20px;" (click)="addEmegenctyContact()" shape="round">Save</ion-button>
+                  <ion-button style="margin-top:20px;" (click)="addEmergencyContact()" shape="round">Save</ion-button>
                 </ion-list>
             </ng-template>
           </ion-modal>
         </div>
-
         <div class="thrid_container">
           <ion-list class="cont_design">
             <h4>Poll</h4> 
