--- a/app/pages/guest-list/guest-list.page.html
+++ b/app/pages/guest-list/guest-list.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="" icon="arrow-back-outline"></ion-back-button>
-   </ion-buttons>
-   
+      <ion-back-button (click)="goBack()"></ion-back-button>
+    </ion-buttons>
     <!-- <ng-container *ngIf="is_modal_open"> -->
       <ion-icon class="ion-padding-end" slot="end" name="close-outline" (click)="closeModal()"></ion-icon>
     <!-- </ng-container> -->
